--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 				<br>
 				-Help students with exposure to the cultural and social environment.
 				<br>
-				-Assist students in basic day to day living during their stay.
+				-Assist students in basic day-to-day needs.
 			</div>
 			<div class="res-style1">
 				<br>
