--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	<div class="content">
 		<div class="background">
 			<div class="hello">
-				<h1>
+				<h1 class="hello-text">
 					Hello,
 				</h1>
 			</div>
