pusshing new work

--- a/index.html
+++ b/index.html
@@ -12,30 +12,31 @@
 
 <body>
 	<!-- Contact -->
-	<div class="contact-wrapper">
+	<div class="content">
+		<div class="contact-wrapper">
 
-		<div class="link-wrapper">
+			<div class="link-wrapper">
 
-			<div class="contact-link">
-				<a href="mailto: cigiowens@hotmail.com" target="_blank">
-					<h2>Email me</h2>
-				</a>
-			</div>
+				<div class="contact-link">
+					<a href="mailto: cigiowens@hotmail.com" target="_blank">
+						<h2>Email me</h2>
+					</a>
+				</div>
 
-			<div class="contact-link">
-				<a href="https://www.linkedin.com/in/cigi-owens/" target="_blank">
-					<h2>LinkedIn</h2>
-				</a>
-			</div>
-			<div class="contact-link">
-				<a href="https://github.com/cigi801" target="_blank">
-					<h2>GitHub</h2>
-				</a>
+				<div class="contact-link">
+					<a href="https://www.linkedin.com/in/cigi-owens/" target="_blank">
+						<h2>LinkedIn</h2>
+					</a>
+				</div>
+				<div class="contact-link">
+					<a href="https://github.com/cigi801" target="_blank">
+						<h2>GitHub</h2>
+					</a>
+				</div>
 			</div>
 		</div>
-	</div>
 
-	<div class="content">
+
 		<div class="background">
 			<div class="hello">
 				<h1 class="hello-text">
@@ -53,40 +54,51 @@
 			<hr>
 		</div>
 		<!-- Background/Skills-->
+
 		<div class="background-skills">
-			<div class="image-block">
-				<img class="image" src="assets/image-me.jpg" alt="Image of Me">
-			</div>
-			<div class="skills-block">
-				<div>
-					<div class="res-style1">
-						<br>
-						About Me
+			<div class="grid-container">
+				<div class="grid-item1">
+					<div class="skills-block">
+						<div>
+							<div class="res-style1">
+								<br>
+								About Me
+							</div>
+							<div class="res-style1">
+								<br>
+								I am currently a student learning computer programming.
+								My goal is to be a full-time, full-stack developer.
+								<br>
+								My work experiences have given me a well-rounded skill set and I am excited for what the
+								future
+								holds!
+							</div>
+						</div>
 					</div>
-					<h2>
-						I am currently a student learning computer programming.
-						My goal is to be a full-time, full-stack developer.
-						<br>
-						My work experiences have given me a well-rounded skill set and I am excited for what the future
-						holds!
-					</h2>
 				</div>
-			</div>
-			<div class="skills-block">
-				<div class="res-style1">
-					<br>
-					Skills and Experience
+				<div class="grid-item2">
+					<div class="image-block">
+						<img class="image" src="assets/image-me.jpg" alt="Image of Me">
+					</div>
 				</div>
-				<h2>
-					<ul>
-						<li>Problem-Solving</li>
-						<li>Attention to Detail</li>
-						<li>Adaptability</li>
-						<li>Self Motivated</li>
-						<li>Database and Office</li>
-						<li>Customer Satisfaction</li>
-					</ul>
-				</h2>
+				<div class="grid-item3">
+					<div class="skills-block">
+						<div class="res-style1">
+							<br>
+							Skills and Experience
+						</div>
+						<div class="res-style1">
+							<ul>
+								<li>Problem-Solving</li>
+								<li>Attention to Detail</li>
+								<li>Adaptability</li>
+								<li>Self Motivated</li>
+								<li>Database and Office</li>
+								<li>Customer Satisfaction</li>
+							</ul>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 		<br>
