--- a/index.html
+++ b/index.html
@@ -51,51 +51,64 @@
 					I'm Cigi
 				</div>
 			</div>
-			<hr>
+
 		</div>
 		<!-- Background/Skills-->
+		<div class="image-block">
+			<img class="image" src="assets/me-portrait.jpg" alt="Image of Me">
+		</div>
 
 		<div class="background-skills">
 			<div class="grid-container">
+				<!-- <div class="grid-item1"> -->
+				<!-- <div class="image-block"> -->
+				<!-- <img class="image" src="assets/me-portrait.jpg" alt="Image of Me"> -->
+				<!-- </div> -->
+
 				<div class="grid-item1">
 					<div class="skills-block">
 						<div>
-							<div class="res-style1">
+							<div class="background-headings">
 								<br>
 								About Me
 							</div>
-							<div class="res-style1">
-								<br>
-								I am currently a student learning computer programming.
+							<div class="description">
+								I am a student learning computer programming.
 								My goal is to be a full-time, full-stack developer.
 								<br>
-								My work experiences have given me a well-rounded skill set and I am excited for what the
-								future
-								holds!
+								<div>
+									<br>
+									My work experiences have given me a well-rounded skill set and I am excited for
+									what
+									the
+									future
+									holds!
+									<br>
+									<div>
+										<br>
+										In my free time, I love spending time outdoors exploring different
+										mountains and landscapes.
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 				<div class="grid-item2">
-					<div class="image-block">
-						<img class="image" src="assets/image-me.jpg" alt="Image of Me">
-					</div>
-				</div>
-				<div class="grid-item3">
 					<div class="skills-block">
-						<div class="res-style1">
-							<br>
-							Skills and Experience
-						</div>
-						<div class="res-style1">
-							<ul>
-								<li>Problem-Solving</li>
-								<li>Attention to Detail</li>
-								<li>Adaptability</li>
-								<li>Self Motivated</li>
-								<li>Database and Office</li>
-								<li>Customer Satisfaction</li>
-							</ul>
+						<div class="description">
+							<div class="background-box">
+								<br>
+								Skills and Experience
+								<ul>
+									<li>Problem-Solving</li>
+									<li>Attention to Detail</li>
+									<li>Adaptability</li>
+									<li>Self Motivated</li>
+									<li>Database and Office</li>
+									<li>Customer Satisfaction</li>
+								</ul>
+							</div>
 						</div>
 					</div>
 				</div>
