--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
 									<br>
 									<div>
 										<br>
-										In my free time, I love spending time outdoors exploring different
+										I am a mother of two adorable kids. In my free time, I love spending time
+										outdoors exploring different
 										mountains and landscapes.
 									</div>
 								</div>
@@ -117,71 +118,81 @@
 		<br>
 		<hr>
 		<!-- Resume -->
-		<div class="resume">
-			<p>
-			<div class="res-headers">
-				EXPERIENCE
-			</div>
-			<div class="res-style1">
-				<br>
-				1-800-Contacts, ​Draper, UT — Prescription Compliance Associate
-			</div>
-			March 2004 - PRESENT
-			<div class="res-style2">
-				<br>
-				-Update contact lens prescriptions quickly and accurately to customer accounts.
-				<br>
-				-Call eye doctors to obtain prescription information for customers.
-				<br>
-				-Help customers resolve order and prescription disputes.
-			</div>
-			<div class="res-style1">
-				<br>
-				OVecs — Exchange Student Host
-			</div>
-			August 2019-PRESENT
-			<div class="res-style2">
-				<br>
-				-Provide a safe and supportive home for students studying from abroad.
-				<br>
-				-Help students with exposure to the cultural and social environment.
-				<br>
-				-Assist students in basic day-to-day needs.
-			</div>
-			<div class="res-style1">
-				<br>
-				Skin Care by Cigi, ​Holladay, UT— ​Owner/ Master Esthetician
-			</div>
-			May 2007 - June 2009
-			<div class="res-style2">
-				<br>
-				-Provided skin care, waxing and permanent cosmetics services.
-				<br>
-				-Marketed my business and built my own clientele.
-				<br>
-				-Handled day to day business duties.
-				<br>
-			</div>
-			<div class="res-headers">
-				<br>
-				EDUCATION
-			</div>
-			<div class="res-style3">
-				<br>
-				Computer Science Student
-			</div>
-			<div class="res-style3">
-				<br>
-				Salt Lake Community College​— Associate of Applied Science Degree
-			</div>
-			Awarded August 2020
-			<div class="res-style3">
-				<br>
-				Cameo College of Essential Beauty— Master Esthetics License
-			</div>
-			Awarded September 2005
+		<div class="flex-container">
+			<div class="resume">
+				<p>
+				<div class="res-headers">
+					EXPERIENCE
+				</div>
+				<div>
+					<div class="res-style1">
+						<br>
+						1-800-Contacts, ​Draper, UT — Prescription Compliance Associate
+					</div>
+					March 2004 - PRESENT
+					<div class="res-style2">
+						<br>
+						-Update contact lens prescriptions quickly and accurately to customer accounts.
+						<br>
+						-Call eye doctors to obtain prescription information for customers.
+						<br>
+						-Help customers resolve order and prescription disputes.
+					</div>
+				</div>
+				<div>
+					<div class="res-style1">
+						<br>
+						OVecs — Exchange Student Host
+					</div>
+					August 2019-PRESENT
+					<div class="res-style2">
+						<br>
+						-Provide a safe and supportive home for students studying from abroad.
+						<br>
+						-Help students with exposure to the cultural and social environment.
+						<br>
+						-Assist students in basic day-to-day needs.
+					</div>
+				</div>
+				<div>
+					<div class="res-style1">
+						<br>
+						Skin Care by Cigi, ​Holladay, UT— ​Owner/ Master Esthetician
+					</div>
+					May 2007 - June 2009
+					<div class="res-style2">
+						<br>
+						-Provided skin care, waxing and permanent cosmetics services.
+						<br>
+						-Marketed my business and built my own clientele.
+						<br>
+						-Handled day to day business duties.
+						<br>
+					</div>
+				</div>
+				<div>
+					<div class="res-headers">
+						<br>
+						EDUCATION
+					</div>
+					<div class="res-style3">
+						<br>
+						Computer Science Student
+					</div>
+					<div class="res-style3">
+						<br>
+						Salt Lake Community College​— Associate of Applied Science Degree
+					</div>
+					Awarded August 2020
+					<div class="res-style3">
+						<br>
+						Cameo College of Essential Beauty— Master Esthetics License
+					</div>
+					Awarded September 2005
 
-			</p>
+					</p>
+				</div>
+			</div>
 		</div>
 
 	</div>
