slight change to wording

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 									<br>
 									<div>
 										<br>
-										I am a mother of two adorable kids. In my free time, I love spending time
+										I am the mother of two adorable kids. In my free time, I love spending time
 										outdoors exploring different
 										mountains and landscapes.
 									</div>
