--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
 	<title>Cigi's Portfolio
 	</title>
 	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="https://fontawesome.com/icons/linkedin?style=brands">
+	<link rel="stylesheet" type='text/css' href="https://fonts.google.com/specimen/Architects+Daughter">
 
 </head>
 
 <body>
 	<!-- Contact -->
 	<div class="content">
-		<div class="contact-wrapper">
+		<div class="contact-container">
 
 			<div class="link-wrapper">
 
@@ -24,9 +26,11 @@
 				</div>
 
 				<div class="contact-link">
-					<a href="https://www.linkedin.com/in/cigi-owens/" target="_blank">
-						<h2>LinkedIn</h2>
-					</a>
+					<div>
+						<a href="https://www.linkedin.com/in/cigi-owens/">
+							<span class="icon"></span> <i class="fab fa-linkedin" target="_blank"></i>
+						</a>
+					</div>
 				</div>
 				<div class="contact-link">
 					<a href="https://github.com/cigi801" target="_blank">
@@ -40,13 +44,13 @@
 		<div class="background">
 			<div class="hello">
 				<h1 class="hello-text">
-					Hello,
+					Hello
 				</h1>
 			</div>
 		</div>
-		<!-- Intro Section -->
+		<!-- Name -->
 		<div>
-			<div class="intro">
+			<div class="name-container">
 				<div class="name">
 					I'm Cigi
 				</div>
@@ -58,7 +62,7 @@
 			<img class="image" src="assets/me-portrait.jpg" alt="Image of Me">
 		</div>
 
-		<div class="background-skills">
+		<div class="about-me-container">
 			<div class="grid-container">
 				<!-- <div class="grid-item1"> -->
 				<!-- <div class="image-block"> -->
@@ -66,7 +70,7 @@
 				<!-- </div> -->
 
 				<div class="grid-item1">
-					<div class="skills-block">
+					<div class="about-me-block">
 						<div>
 							<div class="background-headings">
 								<br>
@@ -96,9 +100,9 @@
 					</div>
 				</div>
 				<div class="grid-item2">
-					<div class="skills-block">
+					<div class="about-me-block">
 						<div class="description">
-							<div class="background-box">
+							<div class="skills-box">
 								<br>
 								Skills and Experience
 								<ul>
@@ -108,6 +112,8 @@
 									<li>Self Motivated</li>
 									<li>Database and Office</li>
 									<li>Customer Satisfaction</li>
+									<li>HTML</li>
+									<li>CSS</li>
 								</ul>
 							</div>
 						</div>
@@ -120,9 +126,10 @@
 		<!-- Resume -->
 		<div class="flex-container">
 			<div class="resume">
-				<p>
-				<div class="res-headers">
-					EXPERIENCE
+				<div class="res-headers-box">
+					<div class="res-headers">
+						EXPERIENCE
+					</div>
 				</div>
 				<div>
 					<div class="res-style1">
@@ -142,7 +149,7 @@
 				<div>
 					<div class="res-style1">
 						<br>
-						OVecs — Exchange Student Host
+						OvECS — Exchange Student Host
 					</div>
 					August 2019-PRESENT
 					<div class="res-style2">
@@ -171,9 +178,10 @@
 					</div>
 				</div>
 				<div>
-					<div class="res-headers">
-						<br>
-						EDUCATION
+					<div class="res-headers-box">
+						<div class="res-headers">
+							EDUCATION
+						</div>
 					</div>
 					<div class="res-style3">
 						<br>
