--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 	<title>Cigi's Portfolio
 	</title>
 	<link rel="stylesheet" href="style.css">
-	<link rel="stylesheet" href="https://fontawesome.com/icons/linkedin?style=brands">
-	<link rel="stylesheet" type='text/css' href="https://fonts.google.com/specimen/Architects+Daughter">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
+		integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous" />
+	<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@1,500&display=swap" rel="stylesheet">
 
 </head>
 
@@ -20,21 +21,21 @@
 			<div class="link-wrapper">
 
 				<div class="contact-link">
-					<a href="mailto: cigiowens@hotmail.com" target="_blank">
-						<h2>Email me</h2>
-					</a>
-				</div>
-
-				<div class="contact-link">
-					<div>
-						<a href="https://www.linkedin.com/in/cigi-owens/">
-							<span class="icon"></span> <i class="fab fa-linkedin" target="_blank"></i>
+					<div class="email-link">
+						<a href="mailto: cigiowens@hotmail.com" target="_blank">
+							<i class="fas fa-envelope-square-2x" style="color: black" style="margin-top: 10px"></i>
 						</a>
 					</div>
 				</div>
+
+				<div class="contact-link">
+					<a href="https://www.linkedin.com/in/cigi-owens/" target="_blank">
+						<i class="fab fa-linkedin fa-2x" style="margin-top: 10px"></i>
+					</a>
+				</div>
 				<div class="contact-link">
 					<a href="https://github.com/cigi801" target="_blank">
-						<h2>GitHub</h2>
+						<i class="fab fa-github fa-2x" style="margin-top: 10px"></i>
 					</a>
 				</div>
 			</div>
@@ -43,7 +44,7 @@
 
 		<div class="background">
 			<div class="hello">
-				<h1 class="hello-text">
+				<h1>
 					Hello
 				</h1>
 			</div>
@@ -162,6 +163,7 @@
 					</div>
 				</div>
 				<div>
+					<p>
 					<div class="res-style1">
 						<br>
 						Skin Care by Cigi, ​Holladay, UT— ​Owner/ Master Esthetician
@@ -178,6 +180,7 @@
 					</div>
 				</div>
 				<div>
+					<br>
 					<div class="res-headers-box">
 						<div class="res-headers">
 							EDUCATION
