--- a/index.html
+++ b/index.html
@@ -9,33 +9,33 @@
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
 		integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous" />
-	<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@1,500&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Merienda:wght@700&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
-	<!-- Contact -->
+
 	<div class="content">
+
+		<!-- Contact -->
 		<div class="contact-container">
 
 			<div class="link-wrapper">
 
 				<div class="contact-link">
-					<div class="email-link">
-						<a href="mailto: cigiowens@hotmail.com" target="_blank">
-							<i class="fas fa-envelope-square-2x" style="color: black" style="margin-top: 10px"></i>
-						</a>
-					</div>
+					<a href="mailto: cigiowens@hotmail.com" target="_blank">
+						<i class="fas fa-envelope-square" style="font-size: 2em"></i>
+					</a>
 				</div>
 
 				<div class="contact-link">
 					<a href="https://www.linkedin.com/in/cigi-owens/" target="_blank">
-						<i class="fab fa-linkedin fa-2x" style="margin-top: 10px"></i>
+						<i class="fab fa-linkedin fa-2x"></i>
 					</a>
 				</div>
 				<div class="contact-link">
 					<a href="https://github.com/cigi801" target="_blank">
-						<i class="fab fa-github fa-2x" style="margin-top: 10px"></i>
+						<i class="fab fa-github fa-2x"></i>
 					</a>
 				</div>
 			</div>
@@ -76,37 +76,47 @@
 							<div class="background-headings">
 								<br>
 								About Me
+								<br>
 							</div>
 							<div class="description">
-								I am a student learning computer programming.
-								My goal is to be a full-time, full-stack developer.
+								<div>
+									Yeah Science!...Computer Science!
+
+								</div>
+								<br>
+								<div class="indent">
+									I am a student at Utah
+									Valley University working towards my Bachelor's Degree in Computer Science.
+								</div>
 								<br>
 								<div>
-									<br>
-									My work experiences have given me a well-rounded skill set and I am excited for
-									what
-									the
-									future
+									Technology is constantly changing. I am a life long learner and I thrive in an
+									environment
+									where I can consistenly learn new skills. I love using my creativity to put
+									projects
+									together and
+									to find new ways to solve problems
+								</div>
+								<br>
+								<div>
+									My goal is to be a full-stack developer.
+									My work experiences have given me a well-rounded
+									skill
+									set and I am excited for what the future
 									holds!
-									<br>
-									<div>
-										<br>
-										I am the mother of two adorable kids. In my free time, I love spending time
-										outdoors exploring different
-										mountains and landscapes.
-									</div>
+
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
+
 				<div class="grid-item2">
 					<div class="about-me-block">
 						<div class="description">
 							<div class="skills-box">
-								<br>
-								Skills and Experience
-								<ul>
+								<p>Skills and Experience</p>
+								<ul class="description">
 									<li>Problem-Solving</li>
 									<li>Attention to Detail</li>
 									<li>Adaptability</li>
@@ -163,7 +173,7 @@
 					</div>
 				</div>
 				<div>
-					<p>
+					<!-- <p> -->
 					<div class="res-style1">
 						<br>
 						Skin Care by Cigi, ​Holladay, UT— ​Owner/ Master Esthetician
@@ -201,7 +211,7 @@
 					</div>
 					Awarded September 2005
 
-					</p>
+					<!-- </p> -->
 				</div>
 			</div>
 		</div>
