changes containers and sizing

--- a/index.html
+++ b/index.html
@@ -59,163 +59,182 @@
 
 		</div>
 		<!-- Background/Skills-->
-		<div class="image-block">
-			<img class="image" src="assets/me-portrait.jpg" alt="Image of Me">
-		</div>
+		<div class="background-planks">
+			<div class="mid-block">
+				<div class="image-block">
+					<img class="image" src="assets/me-portrait.jpg" alt="Image of Me">
+				</div>
 
-		<div class="about-me-container">
-			<div class="grid-container">
-				<!-- <div class="grid-item1"> -->
-				<!-- <div class="image-block"> -->
-				<!-- <img class="image" src="assets/me-portrait.jpg" alt="Image of Me"> -->
-				<!-- </div> -->
+				<div class="about-me-container">
+					<div class="grid-container">
+						<!-- <div class="grid-item1"> -->
+						<!-- <div class="image-block"> -->
+						<!-- <img class="image" src="assets/me-portrait.jpg" alt="Image of Me"> -->
+						<!-- </div> -->
 
-				<div class="grid-item1">
-					<div class="about-me-block">
-						<div>
-							<div class="background-headings">
-								<br>
-								About Me
-								<br>
-							</div>
-							<div class="description">
+						<div class="grid-item1">
+							<div class="about-me-block">
 								<div>
-									Yeah Science!...Computer Science!
-
-								</div>
-								<br>
-								<div class="indent">
-									I am a student at Utah
-									Valley University working towards my Bachelor's Degree in Computer Science.
-								</div>
-								<br>
-								<div>
-									Technology is constantly changing. I am a life long learner and I thrive in an
-									environment
-									where I can consistenly learn new skills. I love using my creativity to put
-									projects
-									together and
-									to find new ways to solve problems
-								</div>
-								<br>
-								<div>
-									My goal is to be a full-stack developer.
-									My work experiences have given me a well-rounded
-									skill
-									set and I am excited for what the future
-									holds!
-
+									<div class="paper">
+										<div class="background-headings">
+											<br>
+											About Me
+											<br>
+										</div>
+										<div class="description">
+											<div>
+												Yeah Science!...Computer Science!
+											</div>
+											<br>
+											<div class="first-paragraph">
+												I am a student at Utah
+												Valley University working towards my Bachelor's Degree in Computer
+												Science.
+											</div>
+											<br>
+											<div class="second-paragraph">
+												Technology is constantly changing. I am a life long learner and I thrive
+												in
+												an
+												environment
+												where I can consistenly learn new skills. I love using my creativity to
+												put
+												projects
+												together and
+												to find new ways to solve problems
+											</div>
+											<br>
+											<div class="third-paragraph">
+												My goal is to be a full-stack developer.
+												My work experiences have given me a well-rounded
+												skill
+												set and I am excited for what the future
+												holds!
+											</div>
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
-					</div>
-				</div>
 
-				<div class="grid-item2">
-					<div class="about-me-block">
-						<div class="description">
-							<div class="skills-box">
-								<p>Skills and Experience</p>
-								<ul class="description">
-									<li>Problem-Solving</li>
-									<li>Attention to Detail</li>
-									<li>Adaptability</li>
-									<li>Self Motivated</li>
-									<li>Database and Office</li>
-									<li>Customer Satisfaction</li>
-									<li>HTML</li>
-									<li>CSS</li>
-								</ul>
+						<div class="grid-item2">
+							<div class="about-me-block">
+								<div class="description">
+									<div class="skills-box">
+										<p>Skills and Experience</p>
+										<ul class="description">
+											<li>Problem-Solving</li>
+											<li>Attention to Detail</li>
+											<li>Adaptability</li>
+											<li>Self Motivated</li>
+											<li>Database and Office</li>
+											<li>Customer Satisfaction</li>
+											<li>HTML</li>
+											<li>CSS</li>
+										</ul>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-		<br>
-		<hr>
-		<!-- Resume -->
-		<div class="flex-container">
-			<div class="resume">
-				<div class="res-headers-box">
-					<div class="res-headers">
-						EXPERIENCE
-					</div>
-				</div>
-				<div>
-					<div class="res-style1">
-						<br>
-						1-800-Contacts, ​Draper, UT — Prescription Compliance Associate
-					</div>
-					March 2004 - PRESENT
-					<div class="res-style2">
-						<br>
-						-Update contact lens prescriptions quickly and accurately to customer accounts.
-						<br>
-						-Call eye doctors to obtain prescription information for customers.
-						<br>
-						-Help customers resolve order and prescription disputes.
-					</div>
-				</div>
-				<div>
-					<div class="res-style1">
-						<br>
-						OvECS — Exchange Student Host
-					</div>
-					August 2019-PRESENT
-					<div class="res-style2">
-						<br>
-						-Provide a safe and supportive home for students studying from abroad.
-						<br>
-						-Help students with exposure to the cultural and social environment.
-						<br>
-						-Assist students in basic day-to-day needs.
-					</div>
-				</div>
-				<div>
-					<!-- <p> -->
-					<div class="res-style1">
-						<br>
-						Skin Care by Cigi, ​Holladay, UT— ​Owner/ Master Esthetician
-					</div>
-					May 2007 - June 2009
-					<div class="res-style2">
-						<br>
-						-Provided skin care, waxing and permanent cosmetics services.
-						<br>
-						-Marketed my business and built my own clientele.
-						<br>
-						-Handled day to day business duties.
-						<br>
-					</div>
-				</div>
-				<div>
-					<br>
+
+			<!-- Resume -->
+			<div class="flex-container">
+				<div class="resume">
 					<div class="res-headers-box">
 						<div class="res-headers">
-							EDUCATION
+							EXPERIENCE
 						</div>
 					</div>
-					<div class="res-style3">
-						<br>
-						Computer Science Student
+					<div>
+						<div class="res-style1">
+							<br>
+							1-800-Contacts, ​Draper, UT — Prescription Compliance Associate
+						</div>
+						<div class="res-style2">
+							March 2004 - PRESENT
+						</div>
+						<div class="res-style2">
+							<br>
+							-Update contact lens prescriptions quickly and accurately to customer accounts.
+							<br>
+							-Call eye doctors to obtain prescription information for customers.
+							<br>
+							-Help customers resolve order and prescription disputes.
+						</div>
 					</div>
-					<div class="res-style3">
+					<div>
+						<div class="res-style1">
+							<br>
+							OvECS — Exchange Student Host
+						</div>
+						<div class="res-style2">
+							August 2019-PRESENT
+						</div>
+						<div class="res-style2">
+							<br>
+							-Provide a safe and supportive home for students studying from abroad.
+							<br>
+							-Help students with exposure to the cultural and social environment.
+							<br>
+							-Assist students in basic day-to-day needs.
+						</div>
+					</div>
+					<div>
+
+						<div class="res-style1">
+							<br>
+							Skin Care by Cigi, ​Holladay, UT— ​Owner/ Master Esthetician
+						</div>
+						<div class="res-style2">
+							May 2007 - June 2009
+						</div>
+						<div class="res-style2">
+							<br>
+							-Provided skin care, waxing and permanent cosmetics services.
+							<br>
+							-Marketed my business and built my own clientele.
+							<br>
+							-Handled day to day business duties.
+							<br>
+						</div>
+					</div>
+					<div>
+						<br>
+						<div class="res-headers-box">
+							<div class="res-headers">
+								EDUCATION
+							</div>
+						</div>
+						<div class="res-style1">
+							<br>
+							Utah Valley University
+						</div>
+						<div class="res-style2">
+							Computer Science Student
+						</div>
+					</div>
+					<div class="res-style1">
 						<br>
 						Salt Lake Community College​— Associate of Applied Science Degree
 					</div>
-					Awarded August 2020
-					<div class="res-style3">
+					<div class="res-style2">
+						Awarded August 2020
+					</div>
+					<div class="res-style1">
 						<br>
 						Cameo College of Essential Beauty— Master Esthetics License
 					</div>
-					Awarded September 2005
+					<div class="res-style2">
+						Awarded September 2005
+					</div>
 
-					<!-- </p> -->
+
 				</div>
 			</div>
 		</div>
-
 	</div>
 	<!-- Footer -->
 	<div class="footer">
