--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
 		integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous" />
 	<link href="https://fonts.googleapis.com/css2?family=Merienda:wght@700&display=swap" rel="stylesheet">
-
+	<link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -66,73 +66,63 @@
 				</div>
 
 				<div class="about-me-container">
-					<div class="grid-container">
-						<!-- <div class="grid-item1"> -->
-						<!-- <div class="image-block"> -->
-						<!-- <img class="image" src="assets/me-portrait.jpg" alt="Image of Me"> -->
-						<!-- </div> -->
-
+					<div class="about-me-grid-container">
 						<div class="grid-item1">
+							<div class="background-headings">
+								About Me
+							</div>
 							<div class="about-me-block">
-								<div>
-									<div class="paper">
-										<div class="background-headings">
-											<br>
-											About Me
-											<br>
+
+								<div class="paper">
+
+									<div class="description">
+										<div>
+											Yeah Science!...Computer Science!
 										</div>
-										<div class="description">
-											<div>
-												Yeah Science!...Computer Science!
-											</div>
-											<br>
-											<div class="first-paragraph">
-												I am a student at Utah
-												Valley University working towards my Bachelor's Degree in Computer
-												Science.
-											</div>
-											<br>
-											<div class="second-paragraph">
-												Technology is constantly changing. I am a life long learner and I thrive
-												in
-												an
-												environment
-												where I can consistenly learn new skills. I love using my creativity to
-												put
-												projects
-												together and
-												to find new ways to solve problems
-											</div>
-											<br>
-											<div class="third-paragraph">
-												My goal is to be a full-stack developer.
-												My work experiences have given me a well-rounded
-												skill
-												set and I am excited for what the future
-												holds!
-											</div>
+										<br>
+										<div class="first-paragraph">
+											I am a student at Utah
+											Valley University working towards my Bachelor's Degree in Computer
+											Science.
+										</div>
+										<br>
+										<div class="second-paragraph">
+											Technology is constantly changing. I thrive
+											in an environment where I can consistenly learn new skills. I love using
+											my creativity to
+											put projects together and to find new ways to solve problems.
+										</div>
+										<br>
+										<div class="third-paragraph">
+											My goal is to be a full-stack developer.
+											My work experiences have given me a well-rounded
+											skill
+											set and I am excited for what the future
+											holds!
 										</div>
 									</div>
+
 								</div>
 							</div>
-						</div>
 
-						<div class="grid-item2">
-							<div class="about-me-block">
-								<div class="description">
-									<div class="skills-box">
-										<p>Skills and Experience</p>
-										<ul class="description">
-											<li>Problem-Solving</li>
-											<li>Attention to Detail</li>
-											<li>Adaptability</li>
-											<li>Self Motivated</li>
-											<li>Database and Office</li>
-											<li>Customer Satisfaction</li>
-											<li>HTML</li>
-											<li>CSS</li>
-										</ul>
-									</div>
+						</div>
+					</div>
+
+					<div class="grid-item2">
+						<div class="about-me-block">
+							<div class="description">
+								<div class="skills-box">
+									<p>Skills and Experience</p>
+									<ul class="bullet-points">
+										<li>Problem-Solving</li>
+										<li>Attention to Detail</li>
+										<li>Adaptability</li>
+										<li>Self Motivated</li>
+										<li>Database and Office</li>
+										<li>Customer Satisfaction</li>
+										<li>HTML</li>
+										<li>CSS</li>
+									</ul>
 								</div>
 							</div>
 						</div>
