--- a/index.html
+++ b/index.html
@@ -81,14 +81,13 @@
 										</div>
 										<br>
 										<div class="first-paragraph">
-											I am a student at Utah
-											Valley University working towards my Bachelor's Degree in Computer
-											Science.
+											I am continuing my education in computer science.
 										</div>
 										<br>
 										<div class="second-paragraph">
-											Technology is constantly changing. I thrive
-											in an environment where I can consistenly learn new skills. I love using
+											Technology is constantly evolving and I want to learn and grow with it. I
+											love
+											using
 											my creativity to
 											put projects together and to find new ways to solve problems.
 										</div>
